fixed spacing in blocks

--- a/client/src/components/CodeBlock/CodeBlock.scss
+++ b/client/src/components/CodeBlock/CodeBlock.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/global";
 
 .code__block {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 
   p {
     @include text;
@@ -27,6 +27,6 @@
   @include link-bold;
 
   @media (max-width: $maxWidthTablet) {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 }
