--- a/client/src/components/ImageBlock/ImageBlock.scss
+++ b/client/src/components/ImageBlock/ImageBlock.scss
@@ -5,7 +5,7 @@
   align-items: center;
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 
   .block__picture {
     width: 100%;
@@ -29,7 +29,7 @@
 
   @media (max-width: $maxWidthMobile) {
     flex-direction: column;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     margin-left: 0;
     margin-right: 0;
 
