--- a/client/src/features/CourseDetail/containers/Content/Content.scss
+++ b/client/src/features/CourseDetail/containers/Content/Content.scss
@@ -33,7 +33,7 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
 
       .header__title {
         display: flex;
@@ -183,7 +183,7 @@
 
       .content__header {
         position: relative;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
 
         .header__title {
           .title--small {
